# ssv

./: .env.example  .gitignore  AGENTS.md  README.md  meson.build  ssv
.github/PULL_REQUEST_TEMPLATE/: 代码合并.md  设计文档变更.md
.github/workflows/: ci.yml
agent/: pyproject.toml
agent/src/ssv_agent/: __main__.py  cli.py  config.py  event_consumer.py  logging.py  service.py
agent/tests/: test_config.py  test_event_consumer.py  test_service.py
config/: ssv.default.yaml  ssv.example.yaml
docker/: .env.example  compose.yaml
docs/: pr-merge-check.md  roadmap.md
docs/specs/: 2026-05-21-安全帽佩戴视频监测分析系统设计.md
gst/: meson.build
gst/ssv-common/: meson.build  ssv_config.cpp  ssv_meta.cpp
gst/ssv-common/include/: ssv_config.hpp  ssv_logging.hpp  ssv_meta.hpp
gst/ssv-infer/: gstssvinfer.cpp  gstssvinfer.hpp  meson.build
gst/ssv-overlay/: gstssvoverlay.cpp  meson.build
gst/ssv-pub/: gstssvpub.cpp  gstssvpub.hpp  meson.build
gst/ssv-template/: gstssvtemplate.cpp  gstssvtemplate.hpp  meson.build
gst/ssv-track/: gstssvtrack.cpp  gstssvtrack.hpp  meson.build
gst/tests/: meson.build  test_gst_plugins.cpp  test_ssv_meta.cpp
scripts/: agent.sh  build.sh  clean.sh  download-model.sh  inspect.sh  lib.sh  pipeline.sh  redis.sh  stop.sh  test.sh
tests/: ssv_cli_test.sh
